# Shellf-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.sqlx/: query-01d07409719f04834634ed10a322241512580f9285a127486496a7aca5bc4607.json  query-08ec69fa9583235e82e9046e5dae8df445173385f7d5f2e60f6fe159879479c2.json  query-09ea3da709097944070dd9d5f4561235698a107b233db2125c850985e484d497.json  query-0f6c3ff41fc65da35f5187d63402fc3a2941c3031cc17a5f21ff545c84b9fede.json  query-14a7ad08890739a00606c57f37d54232dd206ce6aafbc779644048a5943b1565.json  query-189f8370c147ef08900909c4d5c1bd8e094d144ab3bfaf6fbafedc318cf57e4f.json  query-1d3a0a431285b946fdca1d7f7b7508bca4ae4a07aa2d04b730bdb789be4bedb1.json  query-1eef50f70b5b2b347d8655e8f614156c030b0554234f457fec31640be29d24ca.json  query-21c595acafbd2687f8f06de49002cadfd66ad10dba4640981014a92d044912c2.json  query-23666efcd5410c126cdccc30f249f46e25ef1bca6d814990b8a97114a728bb1d.json  query-2384fd5bb639bbee67a7e6f9c8976501d5a4be5ff86c6a7c689a6dcb1b1212ee.json  query-2a013297ffd4dbb0573b8301b9332804cfa9385659e6afd45e3632c6ac3a9f4d.json  query-2d5fe67f174d57d74092cacceb921c6d7ae207e9422cdfdd82b7b78a03801c84.json  query-2efe20b8341d18214d8a8a31456e3b5db632d4a5e209e912cb2f7b157b013f20.json  query-2fa809e96c82f08889933a7d69d53aff26a8b7b9229f1f6586eab49d4bbce6ff.json  query-327c1b16196e8108656e8cf2cd2059311028520b28fedf6e958f75ad911480cd.json  query-40a4fddcba963d23351dd78a93515d0f45036a4a2fe87e696e1285fe1c881a9b.json  query-50fb2b384cba43b1b206b37ef51bfb05b36dbf595d997c6fbaa28b6220b88bac.json  (+40 more)
migrations/: 01_tables.sql  02_functions.sql  (+7 more)
(+78 files in other folders)
