[package]
name = "game_manager"
version = "1.0.0"
edition = "2021"

[dependencies]
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
quick-xml = { version = "0.31", features = ["serialize"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "macros"] }
async-trait = "0.1"
dotenvy = "0.15"
mockall = "0.14.0"
tracing = "0.1.44"
mantra-rust-macros = { version = "0.7.0", features = ["stdout"] }
thiserror = "2.0.18"

[dev-dependencies]
expectrl = "0.8.0"
futures = "0.3"
once_cell = "1.21.4"

[[test]]
name = "cli"
path = "tests/cli.rs"